# pygbs

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  setup.pypy
.github/workflows/: cmake-single-platform.yml
docs/: apt.txt  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst
docs/source/api/: analysis.rst  build.rst  core.rst  interpolate.rst  tools copy.rst  transform.rst
docs/source/examples/: foilApprox.ipynb  interpolation.ipynb  perfs.ipynb
inc/: gbsBindBuildSurfaces.h  gbsBindCurves.h  gbsBindDiscretize.h  gbsBindShaping.h  gbsBindSurfaceTools.h  gbsBindSurfaces.h  gbsbindapprox.h  gbsbindbuildcurve.h  gbsbindextrema.h  repr.h
pygbs/: __init__.py
python/: bsCurveEditor.py  plotlyplot.py
python/gbs/: __init__.py
src/: CMakeLists.txt  gbsAnalysisBind.cpp  gbsBindAnalysis.cpp  gbsBindAnalysis.h  gbsBindBaseGeom.cpp  gbsBindBaseGeom.h  gbsBindBasisFunctions.cpp  gbsBindBasisFunctions.h  gbsBindBuildSurfaces.cpp  gbsBindCurveTools.cpp  gbsBindCurveTools.h  gbsBindCurves.cpp  gbsBindDiscretize.cpp  gbsBindInterpCurve.h  gbsBindInterpSurface.h  gbsBindShaping.cpp  gbsBindSurfaceTools.cpp  gbsBindSurfaces.cpp  gbsBindTransform.cpp  gbsBindTransform.h  gbsBuilBind.cpp  gbsBuildBind.cpp  gbsCoreBind.cpp  gbsInterpolateBind.cpp  gbsToolsBind.cpp  gbsTransformBind.cpp  gbsbind.cpp  gbsbindapprox.cpp  gbsbindbuildcurve.cpp  gbsbindbuildcurve.h  gbsbindinterp.cpp  gbsbindmesh.cpp  gbsbindrender.cpp  pybind_interp.cpp  vtk_bind.h
studies/: foilApprox.ipynb  interpolation.ipynb  perfs.ipynb
tests/: test_pickle.py
