[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build",
  "cmake>=3.18",
  "pybind11>=2.6",
  # "eigen>=3.0",
  "scikit-build-core[pyproject]>=0.9.2"
]
build-backend = "scikit_build_core.build"


[project]
name = "pygbs"
version = "0.4.0"
# dynamic = ["version"]
description = "Python bindings for the GBS library"
# readme = "README.md"
license = { text = "GNU GPL3.0" }
authors = [
    { name = "Sébastien Raymond", email = "sebastien@ssg-aero.com" },
]
dependencies = [

]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
wheel.packages = ["pygbs"]
cmake.verbose = true
cmake.minimum-version = "3.18"
minimum-version = "0.5.1"
sdist.include = [".git", "pygbs"]