[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build",
  "scikit-build-core[pyproject]>=0.9.2"
]
build-backend = "scikit_build_core.build"


[project]
name = "pygbs"
version = "0.4.2"
description = "Python bindings for the GBS library"
readme = "README.md"
license = { text = "GNU GPL3.0" }
authors = [
    { name = "Sebastien Raymond", email = "sebastien@ssg-aero.com" },
]
dependencies = [
  "plotly"
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
wheel.packages = ["pygbs"]
cmake.args = [
  "-DBUILD_SHARED_LIBS=OFF",
  "-DNLOPT_PYTHON=OFF",
  "-DNLOPT_OCTAVE=OFF",
  "-DNLOPT_GUILE=OFF",
  "-DNLOPT_JAVA=OFF",
  "-DNLOPT_SWIG=OFF",
  "-DNLOPT_LUKSAN=OFF"
]
cmake.verbose = false
cmake.minimum-version = "3.18"
minimum-version = "0.5.1"
sdist.include = [".git", "pygbs", "nlopt"]